feat: kubernetes service endpoint level discovery